XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ????

- Implemented RFC #0083: Define classes through stream wrappers
  (kiesel)
- Deprecated xml.XSLProcessor - use xml.DomXSLProcessor instead
  Sablotron was removed from ext in PHP5 (in Version 5.0.0 Beta 1
  on 29-Jun-2003, ChangeLog states: "Completely Overhauled XML 
  support ... Moved the old DOM-XML and XSLT extensions to PECL")
  Neither PECL nor PECL4Win show any trace of ext/xslt extension 
  anymore, though.
  (friebe)
- Changed xml.XMLScriptlet to use xml.DomXSLProcessor
  (friebe)

>>>>>>> .r9281
Version 5.1.2, released 2007-01-10
----------------------------------
SVN version: 9224

- Made rdbms.DataSet class abstract
  (friebe)
- Fix static initializer not being called for classes loaded via 
  uses wrapper 
  (friebe)
- Implemented RFC #0105: Package-Info
  (friebe)
- Fix setBase() when working with in-memory stylesheets
  (clang)
- Fix "Static function DataSet::getPeer() should not be abstract"
  in rdbms.DataSet
  (friebe)

Version 5.1.1, released 2007-01-04
----------------------------------
SVN version: 9114

- Make arbitrary request headers available in CGI sapi
  (kiesel)
- Implement more stream wrapper functions in XpXarLoader, providing a
  more complete stream wrapper support (file_exists now works)
  (kiesel)
- Fix addRecipient() method in peer.mail.Message
  (kiesel)
- Make xml.DomXSLProcessor::setBase() work again
  (kiesel)
- Show class' apidoc comment in xpcli --help|-?
  (friebe)
- Added lang.XPClass::getComment()
  (friebe)
- Added lang.reflect.Field::getModifiers()
  (friebe)
- Added lang.reflect.Modifiers utility class
  (friebe)
- Made CLI sapi print uncaught exceptions to STDERR
  (friebe)
- Made Doclet API parse XP5 syntax
  (friebe)
- Exclude replication tables from SybaseDBAdapter::getTables()
  (friebe)