@@ -6,6 +6,9 @@ Version ?.?.?, released ????-??-??
 ----------------------------------
 SVN version: ????
 
+- Use stream wrapper loading for loadClass() in class
+  lang.archive.ArchiveClassLoader
+  (kiesel)
 - Implemented RFC #0083: Define classes through stream wrappers
   (kiesel)
 - Deprecated xml.XSLProcessor - use xml.DomXSLProcessor instead
@@ -18,7 +21,6 @@ SVN version: ????
 - Changed xml.XMLScriptlet to use xml.DomXSLProcessor
   (friebe)
 
->>>>>>> .r9281
 Version 5.1.2, released 2007-01-10
 ----------------------------------
 SVN version: 9224
